fixed font size issues on mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -308,7 +308,7 @@
     }
 
     .skill-item i {
-        font-size: 1.5rem;
+        font-size: 33px;
     }
 
     .skill-name {
